# longread-reviewer

./: Cargo.toml  README.md
.github/workflows/: generate-examples.yml
docs/: index.html
example/: NA19240_2020_merged.ccs.hg38.aligned.chr17_10958130_11017414.bam  NA19240_2020_merged.ccs.hg38.aligned.chr17_10958130_11017414.bam.bai
example/output/: assembly_results.txt  evaluation_results.txt  fitness_metrics.txt  haplotype_assignments.txt  read_summary.txt
examples/: debug_event.rs  debug_event_output.txt  example_output.txt  generate_output.rs  gui_viewer.rs  interactive_viewer.rs
src/: lib.rs  main.rs  region.rs
src/alignment/: mod.rs  reader.rs
src/assembly/: engine.rs  method.rs  mod.rs  sv_detect.rs
src/haplotype/: assign.rs  mod.rs
src/metrics/: fitness.rs  mod.rs
src/reference/: fasta.rs  mod.rs
src/viewer/: app.rs  enhanced_view.rs  mod.rs  render.rs
tests/: generate_examples.rs  integration.rs  integration_test.rs
tests/data/: NA19240.chr17_fragment.bam  NA19240.chr17_fragment.bam.bai  chr17_fragment.fa  chr17_fragment.fa.fai  download_from_source.sh  download_reference.sh
